# hw3-HarishanakarRU

./: Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO
ligotools.egg-info [Make into gitignore]/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
